# Ai_agents

./: .gitignore  config.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_email_system.py
Services/: tool_executer.py
agents/: AgentExecutor.py  CEO_Agent.py  COO_Agent.py  conversation_agent.py
base/: agent_base.py  retriever_base.py  tool_base.py
company_data_files/: HappyTuna_BitriX_Use_Case_Knowledge_Base_v2.md  agent roles.md  assets.md  company profile.md
data/: email.db  email_test.txt
data/chroma_company_db/: chroma.sqlite3
email_system/: .dockerignore  Dockerfile  OWNERSHIP.md  README.md  __init__.py  requirements.txt
email_system/api/: __init__.py  email_api.py
email_system/base/: tool_base.py
email_system/client/: __init__.py  mail_client.py
email_system/store/: __init__.py  email_store.py
email_system/tools/: __init__.py  check_inbox.py  nat_tools.py  send_email.py
happytuna_bitrix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
services/: document_store.py  email_api.py  email_store.py  embedding_service.py  llm_client.py  mail_client.py  rag_pipeline.py  tool_executor.py
tools/: check_inbox.py  nat_tools.py  read_email_tool.py  send_email.py
