[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "happytuna-bitrix"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["tools", "base", "services"]

[project.entry-points."nat.components"]
happytuna_tools = "tools.nat_tools"
